--- a/public/global.css
+++ b/public/global.css
@@ -177,6 +177,7 @@ h2 {
 a {
 	color: var(--a-color);
 	text-decoration: none;
+	
 }
 
 div {
@@ -499,6 +500,25 @@ li {
 	91%{
 		border: 1px solid rgb(255,0,127);
 	}
+}
+
+.rainbow_text_animated {
+    background: linear-gradient(to right, #6666ff, #0099ff , #00ff00, #ff3399, #6666ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    animation: rainbow_animation 6s ease-in-out infinite;
+    background-size: 400% 100%;
+}
+
+@keyframes rainbow_animation {
+    0%,100% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 100% 0;
+    }
 }
 
 /* Mobile friendly stuff */
